2006-01-07  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed cache-out bug which prevented eggs from reseting when
	  teleporting between maps.

2006-01-06  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamedat.cc: Checking for the existance of ireg files before saving
	  them to zip files prevents crashes when saving new maps for existing
	  games.
	* gamemap.cc, objs/virtstone.*, usecode/intrinsics.cc, ucinternal.*:
	  Added multimap support to the following intrinsics:
		update_last_created & move_object (if the location is a 4-element
		array, the 4th element is the map #);
		mark_virtue_stone & recall_virtue_stone (now save/restore the map #);
		save_pos & teleport_to_saved_pos (now save/restore the map #).
	  Virtue stones from older save games still work, and so will (I hope)
	  the saved positions from older SI saves.

2006-01-03  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.h: get_usecode now returns correct value for NPCs with no
	  assigned usecode *and* with a shape# >1023.
	* objs.h: added a virtual get_usecode function which returns correct
	  usecode function for a given shape.
	* usecode/intrinsics.cc, etc.: added new intrinsic to get an object's
	  usecode function number via usecode (mostly to allow the calling of
	  an item's usecode given an item reference to that item).
	  
2005-12-29  Max Horn  <max@quendi.de>

	* configure.ac, debian/, Makefile.am: Removing the debian directory,
	as requested by the debian package maintainer

2005-12-15  Max Horn  <max@quendi.de>

	* alloc.cc, Makefile.am, msvcstuff/Exult.vcproj: Removed alloc.cc.

2005-12-14  Max Horn  <max@quendi.de>

	* configure.ac: Removed several outdated / obsolete configure options.

2005-12-13  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* egg.cc: Set facing for egg-created monsters.

2005-12-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.ac, version.cc: netbsd (partial patch #1111951)

2005-12-10  Max Horn  <max@quendi.de>
