@@ -1,6 +1,8 @@
 2006-01-07  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Fixed cache-out bug which prevented eggs from reseting when
 	  teleporting between maps.
+	* usecode/intrinsics.cc: Multimap support for display_area
+	  intrinsic.
 
 2006-01-06  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* gamedat.cc: Checking for the existance of ireg files before saving
